<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_bdconfig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rf.rastreadorem.activities.BDConfigActivity"
    tools:showIn="@layout/app_bar_bdconfig">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="8dp">

        <TextView
            android:text="@string/editar_configura_es_bd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_editar_config_bd"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:textAppearance="@android:style/TextAppearance.Widget.PopupMenu.Large"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_editar_config_bd"
            android:layout_alignParentStart="true"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/textInputLayout_nome_bd">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_do_bd"
                android:id="@+id/editText_nome_do_bd"
                android:inputType="text"
                android:imeOptions="actionNext"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout_nome_bd"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="16dp"
            android:id="@+id/textInputLayout_ip_host">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_do_host"
                android:id="@+id/editText_ip_host"
                android:inputType="textUri"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout_ip_host"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            android:id="@+id/textInputLayout_user">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usu_rio"
                android:id="@+id/editText_user"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout_user"
            android:layout_alignParentStart="true"
            android:background="@android:color/white"
            android:layout_marginBottom="16dp"
            android:id="@+id/textInputLayout_pwd">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:id="@+id/editText_pwd"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:drawableRight="@android:drawable/ic_menu_view"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salvar"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:layout_below="@id/textInputLayout_pwd"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:id="@+id/button_salvar_config_bd"/>
    </RelativeLayout>

</RelativeLayout>
